--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stomp/stompjs": "^7.0.0",
     "antd": "^5.12.3",
     "axios": "^1.5.0",
+    "cypress": "^13.6.2",
     "i18next": "^23.7.11",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
